modify socket logic

--- a/src/HiSocket.Tcp/packages.config
+++ b/src/HiSocket.Tcp/packages.config
@@ -3,4 +3,5 @@
   <package id="HiFramework" version="1.0.6" targetFramework="net35" />
   <package id="HiFramework.Assert" version="1.0.3" targetFramework="net35" />
   <package id="HiFramework.Core" version="1.0.0" targetFramework="net35" />
+  <package id="HiFramework.Log" version="1.0.7" targetFramework="net35" />
 </packages>
