--- a/src/HiSocket.Tcp/HiSocket.Tcp.csproj
+++ b/src/HiSocket.Tcp/HiSocket.Tcp.csproj
@@ -43,6 +43,9 @@
     <Reference Include="HiFramework.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\HiFramework.Core.1.0.0\lib\net35\HiFramework.Core.dll</HintPath>
     </Reference>
+    <Reference Include="HiFramework.Log, Version=1.0.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\HiFramework.Log.1.0.7\lib\net35\HiFramework.Log.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
